<resources>
    <string name="app_name">PIVENTO</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">username</string>
    <string name="enterpassword">Enter password</string>
    <string name="enterusername">Enter username</string>
    <string name="login">Login</string>
    <string name="restock">Restock</string>
    <string name="receivedStock">Received Stock</string>
    <string name="addProduct">Add Product</string>
    <string name="enterProName">Enter Product Name</string>
    <string name="enterBarCodeNumber">Enter Bar Code Number</string>
    <string name="wholesalePrice">Wholesale Price(£)</string>
    <string name="retailPrice">Retail Price(£)</string>
    <string name="quantity">Quantity</string>
    <string name="totalStockValue">Total Stock</string>
    <string name="noData">No Data at this moment</string>
    <string name="placeOrder">Place Order</string>
    <string name="received">Received</string>
    <string name="checkout">Checkout</string>
    <string name="noDataInCart">No Item in Cart</string>
    <string name="noUser">User does not exist</string>
    <string name="addToCart">Add to Cart</string>
    <string name="loginhere">Login Here</string>
    <string name="GALLERY">gallery</string>
    <string name="CAMERA">Camera</string>
    <string name="text_cancel">cancel</string>
    <string name="alert">Alert</string>
    <string name="ok">ok</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="confirm">Confirm</string>
    <string name="cencel">Cancel</string>
    <string name="summery">Product Summery</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_discount_code">Enter Discount Code</string>
</resources>