<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin10"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/background_with_round_top"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin10"
        android:text="@string/GALLERY"
        android:textAllCaps="true"
        android:textColor="@color/COLOR_TEXT"
        android:textSize="@dimen/textsize_normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="@dimen/margin2"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/background_with_round_bottom"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin10"
        android:text="@string/CAMERA"
        android:textAllCaps="true"
        android:textColor="@color/COLOR_TEXT"
        android:textSize="@dimen/textsize_normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/margin30"
        android:background="@drawable/background_button_yellow"
        android:elevation="@dimen/margin15"
        android:text="@string/text_cancel"
        android:textColor="@color/black" />

</LinearLayout>