<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddProductActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etBarCode"
                android:maxLength="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:background="@drawable/edit_text_border_corner"
                android:hint="@string/enterBarCodeNumber"
                android:inputType="number"
                android:textColor="@color/black"
                android:padding="@dimen/padding15" />

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_corner"
                android:hint="@string/enterProName"
                android:textColor="@color/black"
                android:padding="@dimen/padding15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvWholesalePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wholesalePrice"
                        android:textSize="@dimen/textsize_normal" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/npWholesalePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="1"
                        android:valueTo="30" />

                    <TextView
                        android:id="@+id/tvRetailPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/retailPrice"
                        android:textSize="@dimen/textsize_normal" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/npRetailPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="1"
                        android:valueTo="30" />

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quantity"
                        android:textSize="@dimen/textsize_normal" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/npQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="100" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivUploadImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/imageadd" />
                <ImageView
                    android:id="@+id/ivUploadVideo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/add_video" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addProduct"></Button>
    </LinearLayout>
</RelativeLayout>