<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="@dimen/margin20"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin20"
        android:gravity="center"
        android:background="@drawable/edit_text_border_corner"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin20"
            android:src="@drawable/ic_baseline_person_24" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="employee1"
            android:hint="@string/enterusername"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:padding="@dimen/margin10"
            android:textColor="@color/black"
            android:textColorHint="#B6B6B6"
            android:textSize="@dimen/textsize_normal" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin20"
        android:gravity="center"
        android:background="@drawable/edit_text_border_corner"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin20"
            android:src="@drawable/ic_baseline_lock_24" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/enterpassword"
            android:inputType="textPassword"
            android:text="p455w0rd"
            android:maxLength="10"
            android:padding="@dimen/margin10"
            android:textColor="@color/black"
            android:textColorHint="#B6B6B6"
            android:textSize="@dimen/textsize_normal" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin25"
        android:background="@color/purple_200"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin13"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin13"
        android:text="@string/noUser"
        android:visibility="gone"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/margin10"
        android:textSize="16sp" />

</LinearLayout>