<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin10"
    android:elevation="@dimen/margin10"
    android:orientation="vertical"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/margin10"
    app:cardElevation="@dimen/margin10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="150dp"
            android:layout_height="143dp"
            android:scaleType="centerCrop"
            android:src="@drawable/noimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:text="Prodct Name"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWholesalePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wholesalePrice"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_normal" />

            <TextView
                android:id="@+id/tvRetailPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retailPrice"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_normal" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_normal" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="100" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>