<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llBottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalValue"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin10"
            android:gravity="center"
            android:text=""
            android:paddingLeft="@dimen/margin10"
            android:paddingRight="@dimen/margin10"
            android:paddingTop="@dimen/margin2"
            android:paddingBottom="@dimen/margin2"
            android:background="@drawable/textview_round"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductList"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvNoDate"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin10"
            android:gravity="center|center_horizontal"
            android:text="@string/noData"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin5"
            android:text="@string/restock" />

        <Button
            android:id="@+id/btnReceivedStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5"
            android:layout_weight="1"
            android:text="@string/receivedStock" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin50"
        android:src="@drawable/ic_baseline_add_24" />
</RelativeLayout>