<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_round"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:gravity="center"
            android:padding="@dimen/margin8"
            android:text="@string/summery"
            android:textColor="@color/white"
            android:textSize="@dimen/margin20"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin20"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvOrderItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrderItemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Quantity"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrderItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Price (£)"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductSummery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin20" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTotalItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Items : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tvTotalQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Quantity : "
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Total Amount : "
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin5"
                android:layout_weight="1"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_weight="1"
                android:text="@string/cencel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>